--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@prisma/client": "^5.11.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@uploadthing/react": "^6.4.0",
+    "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "file-saver": "^2.0.5",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.358.0",
     "next": "14.1.3",
     "prisma": "^5.11.0",
+    "puppeteer": "^22.6.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
@@ -31,6 +35,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
