--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "prisma generate && \next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -22,7 +22,6 @@
     "lucide-react": "^0.358.0",
     "next": "14.1.3",
     "prisma": "^5.11.0",
-    "puppeteer": "^22.6.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
