--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "jspdf": "^2.5.1",
     "lucide-react": "^0.358.0",
     "next": "14.1.3",
+    "playwright": "^1.42.1",
     "prisma": "^5.11.0",
-    "puppeteer": "^22.6.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
