--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jspdf": "^2.5.1",
     "lucide-react": "^0.358.0",
     "next": "14.1.3",
+    "pdfmake": "^0.2.10",
     "playwright": "^1.42.1",
     "prisma": "^5.11.0",
     "react": "^18",
@@ -37,6 +38,7 @@
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
+    "@types/pdfmake": "^0.2.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
