--- a/.env
+++ b/.env
@@ -4,12 +4,14 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://edo:kimq5WQ2bV0M2lQPmcvOug@drag-drop-8710.8nk.gcp-asia-southeast1.cockroachlabs.cloud:26257/borrow?sslmode=verify-full"
+DATABASE_URL="postgresql://edo:kimq5WQ2bV0M2lQPmcvOug@drag-drop-8710.8nk.gcp-asia-southeast1.cockroachlabs.cloud:26257/surat?sslmode=verify-full"
 
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_Zmxvd2luZy1yaGluby00MS5jbGVyay5hY2NvdW50cy5kZXYk
-CLERK_SECRET_KEY=sk_test_5ixgrPzGQucEMCICymd0nZLhR24IZnduZC9zP8KrHP
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_cmVhZHkta2l0ZS0yNC5jbGVyay5hY2NvdW50cy5kZXYk
+CLERK_SECRET_KEY=sk_test_9lfaRdUoOlHbSkDMHwfRnghjqHVyOCv8No4dHIBNyX
+
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
-CLERK_WEBHOOK_SECRET=whsec_pTJSp6iZ6bNKG1dwchKhqR7IOH8Z2JM3
+CLERK_WEBHOOK_SECRET=whsec_22HhYJm3qLMgj0PiiaYvWT5e/q8Agowb
+
