--- a/package.json
+++ b/package.json
@@ -12,21 +12,34 @@
     "@clerk/nextjs": "^4.29.9",
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.11.0",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-hover-card": "^1.0.7",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
     "@uploadthing/react": "^6.4.0",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "file-saver": "^2.0.5",
+    "framer-motion": "^11.0.24",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.358.0",
     "next": "14.1.3",
+    "next-themes": "^0.3.0",
     "pdfmake": "^0.2.10",
     "playwright": "^1.42.1",
     "prisma": "^5.11.0",
     "react": "^18",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18",
-    "react-hook-form": "^7.51.1",
+    "react-hook-form": "^7.51.2",
+    "sonner": "^1.4.41",
     "svix": "^1.21.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
