--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "@syncfusion/ej2-react-buttons": "^25.1.35",
+    "@syncfusion/ej2-react-inputs": "^25.1.37",
     "@uploadthing/react": "^6.4.0",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
